--- a/src/app/Components/card/card.component.html
+++ b/src/app/Components/card/card.component.html
@@ -1,11 +1,9 @@
-<div class="row justify-content-center gap-3">
-  <div class="card py-3 col-md-4 col-sm-12 rounded-5 text-center" *ngFor="let card of cards">
-    <div class="mt-4 text-center">
-      <img [src]="card.image" alt="Card image cap">
+<div class="d-flex my-5 justify-content-md-center flex-column flex-md-row">
+  <div class="card border rounded-5 mx-md-3 py-3 text-center" *ngFor="let card of cards">
+    <div>
+      <img [src]="card.image" class="my-4" alt="Card image cap">
     </div>
-    <div class="card-body p-0 mt-3">
-      <h2 class="fs-2 dark-blue">{{card.title}}</h2>
-      <p class="fs-6 py-md-0 roboto-font">{{card.description}}</p>
-    </div>
+    <h2 class="dark-blue fw-bold">{{card.title}}</h2>
+    <p class="px-3">{{card.description}}</p>
   </div>
 </div>
