--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,30 +1,30 @@
 <!-- Start Introduction Section -->
-<section class="introduction roboto-font pt-5">
+<section class="introduction roboto-font pt-3 pt-md-5 text-center text-md-start">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <p class="fs-4 p-md-5 dark-blue">
+      <div class="col-md-6 col-sm-12 m-auto">
+        <p class="fs-4 dark-blue mb-5 mb-md-0 par">
           <span class="fw-bold text-uppercase">cfin</span> will unleash your business's potential
           and drive everlasting impact by providing insights about all
           your business financials in a simple dashboard.
         </p>
       </div>
-      <div class="col-md-6 col-sm-12 d-flex align-items-center justify-content-end">
+      <div class="col-md-6 col-sm-12 text-center text-md-end">
         <img class="w-75" src="assets/home/Vector Smart Object copy.png" alt="Vector Smart">
       </div>
     </div>
     <div class="text-center mt-5 mb-3">
       <h6 class="dark-blue fs-4 mb-4">A Simplistic, Informative, and Leading Tool</h6>
-      <button class="btn bg-color rounded-5 border-0 py-2 px-4 dark-blue fs-5" routerLink="/signup">
+      <button class="btn mb-5 mb-md-0 bg-color rounded-5 border-0 py-2 px-4 dark-blue fs-5" routerLink="/signup">
         Start your free trial now
       </button>
     </div>
 
-    <div class="row p-md-5 d-flex align-items-center justify-content-center">
-      <div class="col-md-6 col-sm-12 mb-4 wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
+    <div class="row mt-md-5 py-md-5">
+      <div class="col-md-6 text-center col-sm-12 mb-4 m-auto">
         <img class="w-75" src="assets/home/Vector Smart Object-3.png" alt="Vector Smart">
       </div>
-      <div class="col-md-6 col-sm-12 wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
+      <div class="col-md-6 col-sm-12 m-auto">
         <h4 class="dark-blue fw-bold ms-md-5">Before</h4>
         <p class="fs-5 ms-md-5">
           Multiple files with multiple versions <br>related to different financial subjects
@@ -32,15 +32,15 @@
       </div>
     </div>
     <hr class="border-0">
-    <div class="row after p-md-5  d-flex align-items-center justify-content-center">
-      <div class="col-md-6 col-sm-12 mb-4 wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
-        <h4 class="dark-blue fw-bold">After</h4>
-        <p class="fs-5">
+    <div class="row py-md-5 mb-3">
+      <div class="col-md-6 col-sm-12 m-auto">
+        <h4 class="dark-blue fw-bold ms-md-5">After</h4>
+        <p class="fs-5 ms-md-5">
           All in one live and unified dashboard that presents <br> the most critical insights of your firm
         </p>
       </div>
-      <div class="col-md-6 mt-3 col-sm-12 wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
-        <img class="w-75 ms-md-5" src="assets/home/Vector Smart Object-4.png" alt="Vector Smart">
+      <div class="col-md-6 col-sm-12 text-center my-3 my-md-0">
+        <img class="w-75" src="assets/home/Vector Smart Object-4.png" alt="Vector Smart">
       </div>
     </div>
     <div class="text-center mt-4 mb-5">
@@ -54,22 +54,22 @@
 <!-- End Introduction Section -->
 
 <!-- Start Business Section -->
-<section class="business dark-blue position-relative">
+<section class="dark-blue business">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-12 concepts pe-md-0">
+      <div class="col-md-6 col-sm-12">
         <h4 class="fw-bold mb-5">Business Concepts That Feed CFIN's Brain</h4>
-        <ul class="list-unstyled ps-3">
-          <li class="fs-6 mb-2" *ngFor="let concept of concepts">
-            <div class="d-inline-block">
-              <p class="fw-bold feat">{{concept.title}}</p>
-              <p>{{concept.details}}</p>
+        <ul class="list-unstyled">
+          <li class="fs-6 d-flex align-items-end mb-4" *ngFor="let concept of concepts">
+            <div>
+              <p class="fw-bold mb-0">{{concept.title}}</p>
+              <p class="mb-0">{{concept.details}}</p>
             </div>
           </li>
         </ul>
       </div>
-      <div class="col-md-6 col-sm-12 wow fadeIn" data-wow-duration="2s" data-wow-offset="200">
-        <img class="w-75 ms-md-5" src="assets/home/Vector Smart Object-5.png" alt="Vector Smart Object">
+      <div class="col-md-6 col-sm-12 text-center my-4 my-md-0 text-md-end">
+        <img class="w-75" src="assets/home/Vector Smart Object-5.png" alt="Vector Smart Object">
       </div>
     </div>
   </div>
@@ -77,21 +77,18 @@
 <!-- End Business Section -->
 
 <!-- Start Statistics Section -->
-<section class="statistics bg-color py-4">
+<section class="bg-color py-4 text-center">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 pt-md-5 col-sm-12 wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
-        <div class="mt-md-3">
-          <h2 class="dark-blue fw-bold mb-0 fs-2">Start your free trial now</h2>
-          <p class="text-white">One month free then 150 SAR/ month or 1350/ year(112.5 SAR/month)</p>
-          <button class="btn bg-white dark-blue border-0 fw-bold rounded-5 mt-3 py-2 px-4 fs-4" type="submit"
-            routerLink="/signin">
-            Start now
-          </button>
-        </div>
+      <div class="col-md-6 col-sm-12 m-auto">
+        <h2 class="dark-blue fw-bold mb-0">Start your free trial now</h2>
+        <p class="text-white">One month free then 150 SAR/ month or 1350/ year(112.5 SAR/month)</p>
+        <button class="btn dark-blue border-0 fw-bold rounded-5 fs-5 px-4 mt-2 mb-5 mb-md-0" routerLink="/signin">
+          Start now
+        </button>
       </div>
-      <div class="col-md-6 col-sm-12 wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
-        <div class="text-md-end text-center">
+      <div class="col-md-6 col-sm-12">
+        <div class="text-center text-md-end">
           <img class="w-75 " src="assets/home/Mocha.png" alt="image">
         </div>
       </div>
