--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -83,7 +83,7 @@
       <div class="col-md-6 col-sm-12 m-auto">
         <h2 class="dark-blue fw-bold mb-0">Start your free trial now</h2>
         <p class="text-white">One month free then 150 SAR/ month or 1350/ year(112.5 SAR/month)</p>
-        <button class="btn dark-blue border-0 fw-bold rounded-5 fs-5 px-4 mt-2 mb-5 mb-md-0" routerLink="/signin">
+        <button class="btn startNow dark-blue border-0 fw-bold rounded-5 fs-5 px-4 mt-2 mb-5 mb-md-0" routerLink="/signin">
           Start now
         </button>
       </div>
@@ -98,33 +98,32 @@
 <!-- End Statistics Section -->
 
 <!-- Start Firm Section -->
-<section class="firm roboto-font py-5">
+<section class="text-center roboto-font py-5">
   <div class="container">
-    <h2 class="text-center fw-bold dark-blue text-center mb-3 mt-3">We care about your firm as much as <br> we care
+    <h2 class="fw-bold dark-blue mb-5 mb-md-3 mt-3">We care about your firm as much as <br> we care
       about ours.</h2>
     <div class="row">
-      <div class="col-md-6 col-sm-12 text-center">
+      <div class="col-md-6 col-sm-12 m-auto">
         <img src="assets/home/contact.png" class="mt-md-5 w-75" alt="Contact">
       </div>
-      <div class="col-md-6 text-center col-sm-12 form-group wow fadeIn" data-wow-duration="2s" data-wow-offset="200">
+      <div class="col-md-6 col-sm-12 form-group">
         <h2 class="fs-1 mt-5 light-color fw-bold mb-4">Get In Touch</h2>
         <form>
           <div class="form-input">
             <input type="text" class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              placeholder="Name" style="color: blue;">
+              placeholder="Name">
           </div>
           <div class="form-input">
             <input type="email" class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Email"
-              style="color: blue;">
+              class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Email">
           </div>
           <div class="form-input">
             <input type="text" class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              placeholder="Subject" style="color: blue;">
+              placeholder="Subject">
           </div>
           <div class="form-input">
             <input type="text" class="mb-5 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              placeholder="Details" style="color: blue;">
+              placeholder="Details">
           </div>
           <button class="btn px-4 bg-color rounded-5 fs-5 dark-blue fw-bold border-0" type="submit">Contact Us</button>
         </form>
