--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -9,7 +9,7 @@
           with insuring that we have the best working atmosphere in the region.</p>
       </div>
       <div class="col-md-6 col-sm-12 text-center text-md-end">
-        <img class="about-img" src="assets/about/Vector Smart Object1.png">
+        <img class="about-img wow fadeIn" data-wow-duration="3s" data-wow-offset="200" src="assets/about/Vector Smart Object1.png">
       </div>
     </div>
   </div>
@@ -17,7 +17,7 @@
 <!-- End About Section -->
 
 <!-- Start Our Culture Section-->
-<section class="bg-color text-center py-5 roboto-font">
+<section class="bg-color text-center py-5 roboto-font  wow bounceInUp" data-wow-duration="2s" data-wow-offset="200">
   <div class="container">
     <h2 class="dark-blue fw-bold mb-3">Our Culture</h2>
     <p class="dark-blue">We at<span class="fw-bold text-uppercase dark-blue"> cfin</span> embrace impact-oriented
