--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -10,7 +10,8 @@
         </p>
       </div>
       <div class="col-md-6 col-sm-12 text-center text-md-end">
-        <img class="w-75" src="assets/home/Vector Smart Object copy.png" alt="Vector Smart">
+        <img class="w-75 wow fadeIn" data-wow-duration="4s" data-wow-offset="300"
+          src="assets/home/Vector Smart Object copy.png" alt="Vector Smart">
       </div>
     </div>
     <div class="text-center mt-5 mb-3">
@@ -21,25 +22,27 @@
     </div>
 
     <div class="row mt-md-5 py-md-5">
-      <div class="col-md-6 text-center col-sm-12 mb-4 m-auto">
+      <div class="col-md-6 text-center col-sm-12 mb-4 m-auto wow bounceInLeft" data-wow-duration="2s"
+        data-wow-offset="200">
         <img class="w-75" src="assets/home/Vector Smart Object-3.png" alt="Vector Smart">
       </div>
-      <div class="col-md-6 col-sm-12 m-auto">
+      <div class="col-md-6 col-sm-12 m-auto wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
         <h4 class="dark-blue fw-bold ms-md-5">Before</h4>
         <p class="fs-5 ms-md-5">
           Multiple files with multiple versions <br>related to different financial subjects
         </p>
       </div>
     </div>
-    <hr class="border-0">
+    <hr class="border-0" />
     <div class="row py-md-5 mb-3">
-      <div class="col-md-6 col-sm-12 m-auto">
+      <div class="col-md-6 col-sm-12 m-auto wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
         <h4 class="dark-blue fw-bold ms-md-5">After</h4>
         <p class="fs-5 ms-md-5">
           All in one live and unified dashboard that presents <br> the most critical insights of your firm
         </p>
       </div>
-      <div class="col-md-6 col-sm-12 text-center my-3 my-md-0">
+      <div class="col-md-6 col-sm-12 text-center my-3 my-md-0  wow bounceInRight" data-wow-duration="2s"
+        data-wow-offset="200">
         <img class="w-75" src="assets/home/Vector Smart Object-4.png" alt="Vector Smart">
       </div>
     </div>
@@ -68,7 +71,8 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-6 col-sm-12 text-center my-4 my-md-0 text-md-end">
+      <div class="col-md-6 col-sm-12 text-center my-4 my-md-0 text-md-end wow fadeIn" data-wow-duration="3s"
+        data-wow-offset="200">
         <img class="w-75" src="assets/home/Vector Smart Object-5.png" alt="Vector Smart Object">
       </div>
     </div>
@@ -80,14 +84,15 @@
 <section class="bg-color py-4 text-center">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-sm-12 m-auto">
+      <div class="col-md-6 col-sm-12 m-auto  wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
         <h2 class="dark-blue fw-bold mb-0">Start your free trial now</h2>
         <p class="text-white">One month free then 150 SAR/ month or 1350/ year(112.5 SAR/month)</p>
-        <button class="btn startNow dark-blue border-0 fw-bold rounded-5 fs-5 px-4 mt-2 mb-5 mb-md-0" routerLink="/signin">
+        <button class="btn startNow dark-blue border-0 fw-bold rounded-5 fs-5 px-4 mt-2 mb-5 mb-md-0"
+          routerLink="/signin">
           Start now
         </button>
       </div>
-      <div class="col-md-6 col-sm-12">
+      <div class="col-md-6 col-sm-12  wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
         <div class="text-center text-md-end">
           <img class="w-75 " src="assets/home/Mocha.png" alt="image">
         </div>
@@ -104,7 +109,8 @@
       about ours.</h2>
     <div class="row">
       <div class="col-md-6 col-sm-12 m-auto">
-        <img src="assets/home/contact.png" class="mt-md-5 w-75" alt="Contact">
+        <img src="assets/home/contact.png" class="mt-md-5 w-75 wow fadeIn" data-wow-duration="2s" data-wow-offset="200"
+          alt="Contact">
       </div>
       <div class="col-md-6 col-sm-12 form-group">
         <h2 class="fs-1 mt-5 light-color fw-bold mb-4">Get In Touch</h2>
@@ -125,7 +131,8 @@
             <input type="text" class="mb-5 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
               placeholder="Details">
           </div>
-          <button class="btn px-4 bg-color rounded-5 fs-5 dark-blue fw-bold border-0" type="submit">Contact Us</button>
+          <button class="btn px-4 bg-color rounded-5 fs-5 dark-blue fw-bold border-0" type="submit"
+            routerLink="/signup">Contact Us</button>
         </form>
       </div>
     </div>
