--- a/src/app/Components/card/card.component.css
+++ b/src/app/Components/card/card.component.css
@@ -6,6 +6,18 @@ img {
   height: 100px;
 }
 
+.card:hover {
+  -webkit-transition: all ease-in-out .5s;
+  -moz-transition: all ease-in-out .5s;
+  -o-transition: all ease-in-out .5s;
+  transition: all ease-in-out .5s;
+  transform: scale(1.1, 1.1);
+  -webkit-transform: scale(1.1, 1.1);
+  -moz-transform: scale(1.1, 1.1);
+  -ms-transform: scale(1.1, 1.1);
+  -o-transform: scale(1.1, 1.1);
+}
+
 @media(max-width: 992px) {
   .card {
     width: 100%;
