--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,4 +1,5 @@
-<section class="footer py-5 roboto-font text-center text-md-start">
+<section class="footer py-5 roboto-font text-center text-md-start wow bounceInUp" data-wow-duration="3s"
+  data-wow-offset="200">
   <div class="container">
     <div class="row">
       <!-- <div class="col-md-6 col-sm-12"> -->
