--- a/src/app/Components/signup/signup.component.html
+++ b/src/app/Components/signup/signup.component.html
@@ -39,7 +39,8 @@
         </p>
       </div>
       <div class="col-md-6 col-sm-12 text-center d-flex align-items-center justify-content-center">
-        <img src="assets/sign/Vector Smart Object-1.png" class="w-50" alt="image">
+        <img src="assets/sign/Vector Smart Object-1.png" class="w-50 wow fadeIn" data-wow-duration="3s"
+          data-wow-offset="300" alt="image">
       </div>
     </div>
   </div>
