--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@
 .roboto-font {
   font-family: Roboto;
 }
+
 .btn:focus {
   box-shadow: none;
   outline: none;
@@ -34,7 +35,9 @@ input:focus {
 }
 
 /* ///////////////////////////////////////////////// */
-
+.btn{
+  background-color: #00e5b9;
+}
 /* Hover */
 .btn:hover {
   color: #00e5b9 !important;
@@ -46,4 +49,3 @@ input:focus {
   box-shadow: 0px 1px 10px #3B5998;
   -ms-transition: all ease-in-out .5s;
 }
-
