--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -114,24 +114,42 @@
       </div>
       <div class="col-md-6 col-sm-12 form-group">
         <h2 class="fs-1 mt-5 light-color fw-bold mb-4">Get In Touch</h2>
-        <form>
-          <div class="form-input">
-            <input type="text" class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              placeholder="Name">
+        <form [formGroup]="form">
+          <div class="form-input mb-3">
+            <input type="text" formControlName="name" required
+              class="border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Name">
+            <div class="text-start ms-5 ps-4 text-danger" *ngIf="(name?.touched || name?.dirty) && name?.invalid">
+              <span *ngIf="name?.errors?.['required']">Name is required</span>
+              <span *ngIf="name?.errors?.['minlength']">Name must be more than 3 letters</span>
+            </div>
           </div>
-          <div class="form-input">
-            <input type="email" class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Email">
+          <div class="form-input mb-3">
+            <input type="email" formControlName="email" required
+              class="border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Email">
+            <div class="text-start ms-5 ps-4 text-danger" *ngIf="email?.invalid && (email?.touched || email?.dirty)">
+              <span *ngIf="email?.errors?.['required']">Email is required</span>
+              <span *ngIf="email?.errors?.['email']">Invalid Email</span>
+            </div>
           </div>
-          <div class="form-input">
-            <input type="text" class="mb-3 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              placeholder="Subject">
+          <div class="form-input mb-3">
+            <input type="text" formControlName="subject" required
+              class="border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Subject">
+            <div class="text-start ms-5 ps-4 text-danger"
+              *ngIf="subject?.invalid && (subject?.touched || subject?.dirty)">
+              <span *ngIf="subject?.errors?.['required']">Subject is required</span>
+              <span *ngIf="subject?.errors?.['minlength']">Subject must be more than 3 letters</span>
+            </div>
           </div>
-          <div class="form-input">
-            <input type="text" class="mb-5 border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0"
-              placeholder="Details">
+          <div class="form-input mb-5">
+            <input type="text" formControlName="details" required
+              class="border-start-0 border-top-0 border-end-0 m-auto w-75 py-2 px-0" placeholder="Details">
+            <div class="text-start ms-5 ps-4 text-danger"
+              *ngIf="details?.invalid && (details?.touched || details?.dirty)">
+              <span *ngIf="details?.errors?.['required']">Details is required</span>
+              <span *ngIf="details?.errors?.['minlength']">Details must be more than 10 letters</span>
+            </div>
           </div>
-          <button class="btn px-4 bg-color rounded-5 fs-5 dark-blue fw-bold border-0" type="submit"
+          <button [disabled]="!form.valid" class="btn px-4 rounded-5 fs-5 dark-blue fw-bold border-0" type="submit"
             routerLink="/signup">Contact Us</button>
         </form>
       </div>
