--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -22,11 +22,11 @@
     </div>
 
     <div class="row mt-md-5 py-md-5">
-      <div class="col-md-6 text-center col-sm-12 mb-4 m-auto wow bounceInLeft" data-wow-duration="2s"
+      <div class="col-md-6 text-center col-sm-12 mb-4 m-auto wow slideInLeft" data-wow-duration="2s"
         data-wow-offset="200">
         <img class="w-75" src="assets/home/Vector Smart Object-3.png" alt="Vector Smart">
       </div>
-      <div class="col-md-6 col-sm-12 m-auto wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
+      <div class="col-md-6 col-sm-12 m-auto wow slideInRight" data-wow-duration="2s" data-wow-offset="200">
         <h4 class="dark-blue fw-bold ms-md-5">Before</h4>
         <p class="fs-5 ms-md-5">
           Multiple files with multiple versions <br>related to different financial subjects
@@ -35,13 +35,13 @@
     </div>
     <hr class="border-0" />
     <div class="row py-md-5 mb-3">
-      <div class="col-md-6 col-sm-12 m-auto wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
+      <div class="col-md-6 col-sm-12 m-auto wow slideInLeft" data-wow-duration="2s" data-wow-offset="200">
         <h4 class="dark-blue fw-bold ms-md-5">After</h4>
         <p class="fs-5 ms-md-5">
           All in one live and unified dashboard that presents <br> the most critical insights of your firm
         </p>
       </div>
-      <div class="col-md-6 col-sm-12 text-center my-3 my-md-0  wow bounceInRight" data-wow-duration="2s"
+      <div class="col-md-6 col-sm-12 text-center my-3 my-md-0  wow slideInRight" data-wow-duration="2s"
         data-wow-offset="200">
         <img class="w-75" src="assets/home/Vector Smart Object-4.png" alt="Vector Smart">
       </div>
@@ -94,7 +94,7 @@
       </div>
       <div class="col-md-6 col-sm-12  wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
         <div class="text-center text-md-end">
-          <img class="w-75 " src="assets/home/Mocha.png" alt="image">
+          <img class="w-75" src="assets/home/Mocha.png" alt="image">
         </div>
       </div>
     </div>
