adding lazy loading and notfound image

--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -35,7 +35,7 @@
 <section class="py-5 roboto-font text-center partners">
   <div class="container">
     <h2 class="dark-blue fw-bold mb-5">Partners in Success</h2>
-    <img src="assets/about/Vector Smart Object2.png" class="mb-5">
+    <img src="assets/about/Vector Smart Object2.png" loading="lazy" class="mb-5">
     <p class="fs-4 py-0 px-md-5">We care about your firm as much as we care about our.<br> Win/ win
       mentality is our way of thinking. We will always support you in areas beyond
       our products' limits, and we will share with you the best practices in the market </p>
