--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <!-- <div class="col-md-6 col-sm-12"> -->
       <div class="col-md-3 col-sm-12 text-center">
-        <img src="assets/home/logo footer.png" class="w-md-75 w-50 mb-4">
+        <img src="assets/home/logo footer.png" loading="lazy" class="w-md-75 w-50 mb-4">
         <div class="social gray-color d-flex justify-content-evenly mb-5 mb-md-0">
           <a href="#">
             <i class="rounded-circle fa fa-facebook-f fs-6 text-white"></i>
