--- a/src/app/Components/not-found/not-found.component.html
+++ b/src/app/Components/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="d-flex align-items-center justify-content-center">
+  <div class="bg-color rounded-circle h-75 wow bounceInUp">
+    <img src="assets/notfound/notfound-removebg-preview.png" alt="Not Found Image" loading="lazy">
+  </div>
+</div>
