--- a/src/app/Components/signup/signup.component.html
+++ b/src/app/Components/signup/signup.component.html
@@ -60,7 +60,7 @@
         </p>
       </div>
       <div class="col-md-6 col-sm-12 text-center d-flex align-items-center justify-content-center">
-        <img src="assets/sign/Vector Smart Object-1.png" class="w-50 wow fadeIn" data-wow-duration="3s"
+        <img src="assets/sign/Vector Smart Object-1.png" loading="lazy" class="w-50 wow fadeIn" data-wow-duration="3s"
           data-wow-offset="300" alt="image">
       </div>
     </div>
