--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -9,8 +9,8 @@
           your business financials in a simple dashboard.
         </p>
       </div>
-      <div class="col-md-6 col-sm-12 text-center text-md-end">
-        <img class="w-75 wow fadeIn" data-wow-duration="4s" data-wow-offset="300"
+      <div class="col-md-6 col-sm-12 text-center text-md-end overflow-hidden">
+        <img class="w-75 wow fadeIn" loading="lazy" data-wow-duration="4s" data-wow-offset="300"
           src="assets/home/Vector Smart Object copy.png" alt="Vector Smart">
       </div>
     </div>
@@ -21,10 +21,10 @@
       </button>
     </div>
 
-    <div class="row mt-md-5 py-md-5">
+    <div class="row mt-md-5 py-md-5  overflow-hidden">
       <div class="col-md-6 text-center col-sm-12 mb-4 m-auto wow slideInLeft" data-wow-duration="2s"
         data-wow-offset="200">
-        <img class="w-75" src="assets/home/Vector Smart Object-3.png" alt="Vector Smart">
+        <img class="w-75" src="assets/home/Vector Smart Object-3.png" loading="lazy" alt="Vector Smart">
       </div>
       <div class="col-md-6 col-sm-12 m-auto wow slideInRight" data-wow-duration="2s" data-wow-offset="200">
         <h4 class="dark-blue fw-bold ms-md-5">Before</h4>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <hr class="border-0" />
-    <div class="row py-md-5 mb-3">
+    <div class="row py-md-5 mb-3 overflow-hidden">
       <div class="col-md-6 col-sm-12 m-auto wow slideInLeft" data-wow-duration="2s" data-wow-offset="200">
         <h4 class="dark-blue fw-bold ms-md-5">After</h4>
         <p class="fs-5 ms-md-5">
@@ -43,7 +43,7 @@
       </div>
       <div class="col-md-6 col-sm-12 text-center my-3 my-md-0  wow slideInRight" data-wow-duration="2s"
         data-wow-offset="200">
-        <img class="w-75" src="assets/home/Vector Smart Object-4.png" alt="Vector Smart">
+        <img class="w-75" src="assets/home/Vector Smart Object-4.png" loading="lazy" alt="Vector Smart">
       </div>
     </div>
     <div class="text-center mt-4 mb-5">
@@ -57,7 +57,7 @@
 <!-- End Introduction Section -->
 
 <!-- Start Business Section -->
-<section class="dark-blue business">
+<section class="dark-blue business overflow-hidden">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12">
@@ -73,7 +73,7 @@
       </div>
       <div class="col-md-6 col-sm-12 text-center my-4 my-md-0 text-md-end wow fadeIn" data-wow-duration="3s"
         data-wow-offset="200">
-        <img class="w-75" src="assets/home/Vector Smart Object-5.png" alt="Vector Smart Object">
+        <img class="w-75" src="assets/home/Vector Smart Object-5.png" loading="lazy" alt="Vector Smart Object">
       </div>
     </div>
   </div>
@@ -81,7 +81,7 @@
 <!-- End Business Section -->
 
 <!-- Start Statistics Section -->
-<section class="bg-color py-4 text-center">
+<section class="bg-color py-4 text-center overflow-hidden">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12 m-auto  wow bounceInLeft" data-wow-duration="2s" data-wow-offset="200">
@@ -94,7 +94,7 @@
       </div>
       <div class="col-md-6 col-sm-12  wow bounceInRight" data-wow-duration="2s" data-wow-offset="200">
         <div class="text-center text-md-end">
-          <img class="w-75" src="assets/home/Mocha.png" alt="image">
+          <img class="w-75" src="assets/home/Mocha.png" loading="lazy" alt="image">
         </div>
       </div>
     </div>
@@ -109,8 +109,8 @@
       about ours.</h2>
     <div class="row">
       <div class="col-md-6 col-sm-12 m-auto">
-        <img src="assets/home/contact.png" class="mt-md-5 w-75 wow fadeIn" data-wow-duration="2s" data-wow-offset="200"
-          alt="Contact">
+        <img src="assets/home/contact.png" loading="lazy" class="mt-md-5 w-75 wow fadeIn" data-wow-duration="2s"
+          data-wow-offset="200" alt="Contact">
       </div>
       <div class="col-md-6 col-sm-12 form-group">
         <h2 class="fs-1 mt-5 light-color fw-bold mb-4">Get In Touch</h2>
