--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light roboto-font">
   <div class="container">
     <a class="navbar-brand me-0" routerLink="#">
-      <img src="assets/home/logo.png" class="navImage w-75 mt-2">
+      <img src="assets/home/logo.png" loading="lazy" class="navImage w-75 mt-2">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
