--- a/src/app/Components/signin/signin.component.html
+++ b/src/app/Components/signin/signin.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-12 text-md-start ps-md-5">
-        <img src="assets/sign/Vector Smart Object.png" alt="image" class="ms-md-5 w-50 mb-5 mb-md-0 wow fadeIn"
+        <img src="assets/sign/Vector Smart Object.png" loading="lazy" alt="image" class="ms-md-5 w-50 mb-5 mb-md-0 wow fadeIn"
           data-wow-duration="3s" data-wow-offset="300">
       </div>
       <div class="col-md-6 col-sm-12 text-center m-auto">
