--- a/src/app/Components/not-found/not-found.component.html
+++ b/src/app/Components/not-found/not-found.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex align-items-center justify-content-center">
-  <div class="bg-color rounded-circle h-75 wow bounceInUp">
-    <img src="assets/notfound/notfound-removebg-preview.png" alt="Not Found Image" loading="lazy">
+<div class="d-flex align-items-center justify-content-center mb-3">
+  <div class="bg-color rounded-circle wow bounceInUp text-center my-3 d-flex align-items-center justify-content-center">
+    <img src="assets/notfound/notfound-removebg-preview.png" class="w-100 h-75" alt="Not Found Image" loading="lazy">
   </div>
 </div>
