Making Modules and Adding lazy loading

--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="text-center mt-5 mb-3">
       <h6 class="dark-blue fs-4 mb-4">A Simplistic, Informative, and Leading Tool</h6>
-      <button class="btn mb-5 mb-md-0 bg-color rounded-5 border-0 py-2 px-4 dark-blue fs-5" routerLink="/signup">
+      <button class="btn mb-5 mb-md-0 bg-color rounded-5 border-0 py-2 px-4 dark-blue fs-5" routerLink="/user/signup">
         Start your free trial now
       </button>
     </div>
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="text-center mt-4 mb-5">
-      <button class="btn bg-color rounded-5 border-0 py-2 px-4 dark-blue fs-5" routerLink="/about">
+      <button class="btn bg-color rounded-5 border-0 py-2 px-4 dark-blue fs-5" routerLink="/main/about">
         Know More About Us
       </button>
     </div>
@@ -88,7 +88,7 @@
         <h2 class="dark-blue fw-bold mb-0">Start your free trial now</h2>
         <p class="text-white">One month free then 150 SAR/ month or 1350/ year(112.5 SAR/month)</p>
         <button class="btn startNow dark-blue border-0 fw-bold rounded-5 fs-5 px-4 mt-2 mb-5 mb-md-0"
-          routerLink="/signin">
+          routerLink="/user/signin">
           Start now
         </button>
       </div>
@@ -150,7 +150,7 @@
             </div>
           </div>
           <button [disabled]="!form.valid" class="btn px-4 rounded-5 fs-5 dark-blue fw-bold border-0" type="submit"
-            routerLink="/signup">Contact Us</button>
+            routerLink="/user/signup">Contact Us</button>
         </form>
       </div>
     </div>
