--- a/src/app/user/components/signin/signin.component.html
+++ b/src/app/user/components/signin/signin.component.html
@@ -26,13 +26,13 @@
             </div>
           </div>
           <button [disabled]="!signinForm.valid" class="btn px-5 rounded-5 fs-6 dark-blue fw-bold border-0"
-            routerLink="/home">
+            routerLink="/main/home">
             Log In
           </button>
         </form>
         <p class="fs-6 dark-blue fw-bold ml-3 mb-5 mb-md-0">
           Don't have account ?
-          <a routerLink="/signup" class="dark-blue fw-bold text-decoration-underline">
+          <a routerLink="/user/signup" class="dark-blue fw-bold text-decoration-underline">
             <strong>Sign Up</strong>
           </a>
         </p>
