--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -4,7 +4,7 @@
 
 .footer {
   background-color: #001769;
-  background-image: url('../../../assets/home/footer.png');
+  background-image: url('../../../../assets/home/footer.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
