--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,10 @@
-<section class="footer py-5 roboto-font text-center text-md-start wow bounceInUp" data-wow-duration="3s"
+<section class="footer py-5 roboto-font text-center text-md-start wow bounceInUp" *ngIf="foot.footerVisible" data-wow-duration="3s"
   data-wow-offset="200">
   <div class="container">
     <div class="row">
       <!-- <div class="col-md-6 col-sm-12"> -->
       <div class="col-md-3 col-sm-12 text-center">
-        <img src="assets/home/logo footer.png" loading="lazy" class="w-md-75 w-50 mb-4">
+        <img src="assets/home/footer.png" loading="lazy" class="w-md-75 w-50 mb-4">
         <div class="social gray-color d-flex justify-content-evenly mb-5 mb-md-0">
           <a href="#">
             <i class="rounded-circle fa fa-facebook-f fs-6 text-white"></i>
@@ -21,17 +21,17 @@
         <h6 class="light-color mb-md-4 fs-5">Website Map</h6>
         <ul class="list-unstyled">
           <li>
-            <a class="text-white fs-6 text-decoration-none" routerLink="/home" routerLinkActive="active">
+            <a class="text-white fs-6 text-decoration-none" routerLink="/main/home" routerLinkActive="active">
               Home
             </a>
           </li>
-          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/about"
+          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/main/about"
               routerLinkActive="active">About Us</a></li>
-          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/contactus"
+          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/main/contactus"
               routerLinkActive="active">Contact Us</a></li>
-          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/signin"
+          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/user/signin"
               routerLinkActive="active">Login</a></li>
-          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/signup"
+          <li class="mt-2"><a class="text-white fs-6 text-decoration-none" routerLink="/user/signup"
               routerLinkActive="active">Sign Up</a></li>
         </ul>
       </div>
